[package]
name = "gtfs-realtime-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
axum-macros = "0.3.7"
bytes = "0.4"
prost = "0.5"
serde = { version = "1.0.171", features = ["derive"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
prost-build = "0.5"
