[package]
name = "gtfs-realtime-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
axum-macros = "0.3.7"
bytes = "0.4"
hyper = { version = "0.14.27", features = ["client"] }
lazy_static = "1.4.0"
mime = "0.3.17"
prost = "0.5"
reqwest = "0.11.18"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"

[build-dependencies]
prost-build = "0.5"
