[package]
name = "gtfs_realtime_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
axum-macros = "0.3.7"
hyper = { version = "0.14.27", features = ["client"] }
prost = "0.11"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
ureq = "2.7.1"

[build-dependencies]
prost-build = "0.11"

[dev-dependencies]
mockito = "1.1.0"
